# hostios

./: Cargo.toml  Dockerfile
application/: .gitignore  Cargo.toml
application/migrations/: 0001_initial_structure.sql
application/src/: error.rs  lib.rs  prelude.rs
application/src/_repositories/: mod.rs
application/src/repositories/: directory.rs  entry.rs  file_tree.rs  mod.rs  tag.rs
application/src/repositories/directories/: create.rs  delete.rs  move_.rs  read.rs
application/src/repositories/file_tags/: delete.rs  insert.rs  list.rs  list_paths.rs  list_tags.rs  mod.rs
application/src/repositories/files/: delete.rs  mod.rs  move_.rs  read.rs  retrieve.rs
application/src/repositories/tags/: delete.rs  insert.rs  retrieve.rs
application/src/use_cases/: mod.rs
application/src/use_cases/directory/: create.rs  delete.rs  mod.rs  move_.rs  read.rs  rename.rs
application/src/use_cases/file/: delete.rs  mod.rs  move_.rs  read.rs  rename.rs
application/src/use_cases/file_tag/: add.rs  filter.rs  mod.rs  remove.rs
application/src/use_cases/tag/: create.rs  delete.rs  mod.rs
application/src/utils/: dir_entry.rs  file.rs  migrations.rs  mod.rs  path.rs  path_buf.rs
daemon/: Cargo.toml  cases.txt
daemon/src/: main.rs
domain/: Cargo.toml
domain/src/models/: directory.rs  entry.rs  file.rs  file_tree.rs  mod.rs  path.rs  tag.rs
fql/: .gitignore  Cargo.toml
fql/src/: client.rs  entry.rs  lib.rs  main.rs  parser.rs  path.rs  statement.rs  tag.rs
presentation/: .gitignore  Cargo.toml
presentation/src/: cli.rs  config.rs  error.rs  main.rs  prelude.rs
presentation/src/routes/directories/: create.rs  delete.rs  mod.rs  move_.rs  read.rs
presentation/src/routes/entry/: delete.rs  delete_tag.rs  insert_tag.rs  mod.rs  move_entry.rs  select.rs  upload.rs
presentation/src/routes/files/: add_tag.rs  delete.rs  mod.rs  move_.rs  read.rs  remove_tag.rs  search_by_tag.rs  upload.rs
presentation/src/routes/tags/: create.rs  delete.rs
presentation/src/utils/: authios.rs  error.rs  mod.rs
src/: cli.rs  config.rs  error.rs  main.rs
src/cli/: mod.rs
src/cli/commands/: migrate.rs  mod.rs  run.rs
src/errors/: mod.rs
src/fql/: client.rs  mod.rs  statement.rs
src/models/: directory.rs  entry.rs  file.rs  mod.rs  path.rs  tag.rs  user_vault.rs
src/params/: mod.rs
src/repositories/: mod.rs
src/routes/: mod.rs
src/use_cases/: mod.rs
src/utils/: authios.rs  database.rs  dir_entry.rs  migrations.rs  mod.rs  path.rs  path_buf.rs  sqlx.rs
src/web/: mod.rs
(+139 files in other folders)
