[workspace]
resolver = "3"
members = ["domain", "application", "presentation", "daemon"]

[workspace.dependencies]
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
thiserror = "2.0.12"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1.47.0", features = ["full"] }
