[package]
name = "hostios"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1.47.0", features = ["full"] }
authios-sdk = { git = "https://github.com/Baguuc/authios-sdk", version = "0.1.0" }
clap = { version = "4.5.42", features = ["derive"] }
clin = { git = "https://github.com/Baguuc/clin", version = "0.1.0" }
colored = "3.0.0"
actix-multipart = "0.7.2"
actix-web = "4"
thiserror = "2"
futures = "0.3.31"
