[package]
name = "hostios-presentation"
version = "0.1.0"
edition = "2021"

[dependencies]
hostios-domain = { path = "../domain" }
hostios-application = { path = "../application" }
authios-sdk = { git = "https://github.com/Baguuc/authios" }

actix-web = "4"
thiserror = "2"
futures = "0.3.31"

sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
clap = { version = "4.5.42", features = ["derive"] }
clin = { git = "https://github.com/Baguuc/clin", version = "0.1.0" }
colored = "3.0.0"
actix-multipart = "0.7.2"
fql = { version = "0.1.0", path = "../fql" }
